0.3.5.4
  - (sharktooth) [DialogManager] Check the "Use CUVID Server" option status before launching CUVID server

0.3.5.3
  - (sharktooth) [x264ConfigurationPanel] Trigger GenericUpdate() on macroblockOptions.SelectIndex change to keep coherency between macroblock options checkboxes and commandline generation
  - (sharktooth) [x264] Added --pic-struct support
  - (sharktooth) [x264] Added --fake-interlaced support
  - (zathor) [x264] old nal-hrd profile values will be migrated

0.3.5.2
  - (sharktooth) [x264] Added nal-hrd complete support and fixed a missing check in the previous commit
  - (sharktooth) [x264] Added open-gop support (requires x264 rev. 1662+)
  - (sharktooth) [x264ConfigurationPanel] Cosmetics and fixes to possible keyint and minkeyint minimum values.
  - (sharktooth) [x264] Added support for "-keyint infinite" option
  - (sharktooth) [xviDEncoder] The Adaptive Quant option now enables VAQ. Commented out the HVS masking command line generation.
  - (sharktooth) [xvidConfigurationPanel] Disabled the HVS masking controls since the current encoder doesn't support them yet.

0.3.5.1
  - (zathor) [FileIndexerWindow] changed caption. Feature request #3019279
  - (zathor) [AudioEncoderInterface] fixed crash if input wav file is locked. Bug #3021693
  - (zathor) [VideoUtil] + [DialogManager] CUVIDServer will be started if needed. Bug #3011113
  - (zathor) [x264ConfigurationPanel] changed preset defaults (requires x264 revision 1658 or higher)
  - (zathor) [x264ConfigurationPanel] added the missing update events to some settings
  - (zathor) [x264ConfigurationPanel] enhanced command line generating for main/baseline profile
  - (zathor) [FileIndexer] disabled MKV indexing with DGAVCDec. Bug #3024329
  - (zathor) [FileIndexer] DGIndexNV is only available if license.txt is found
  - (zathor) [MuxProvider] added support for SUP suptitles in MKV (requires MkvToolNix 4.1.0 or higher)