@@ -1,4 +1,5 @@
 0.3.5.4
+  - (sharktooth) [x264ConfigurationPanel] Moved Profile and Level to the main tab and made some more space for more VUI options
   - (sharktooth) [DialogManager] Check the "Use CUVID Server" option status before launching CUVID server
 
 0.3.5.3
